RESOLVED FIXED82118
[chromium] Incorrect replica originTransform used in CCDamageTracker
https://bugs.webkit.org/show_bug.cgi?id=82118
Summary [chromium] Incorrect replica originTransform used in CCDamageTracker
Shawn Singh
Reported 2012-03-23 22:47:35 PDT
On Dana's patch in https://bugs.webkit.org/show_bug.cgi?id=81296, we forgot to change on spot in the damage tracker code. Its also my mistake for unofficially reviewing and not catching this. Patch coming in a moment. btw, 100% credit goes to Dana for finding this. =)
Attachments
Patch (5.96 KB, patch)
2012-03-23 22:55 PDT, Shawn Singh
no flags
const reference. thanks Dana\! (5.97 KB, patch)
2012-03-23 23:04 PDT, Shawn Singh
no flags
Patch (1.88 KB, patch)
2012-04-03 12:42 PDT, Shawn Singh
no flags
Patch for landing (1.83 KB, patch)
2012-04-03 13:00 PDT, Shawn Singh
no flags
Shawn Singh
Comment 1 2012-03-23 22:55:50 PDT
Dana Jansens
Comment 2 2012-03-23 23:01:01 PDT
Comment on attachment 133621 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=133621&action=review > Source/WebCore/platform/graphics/chromium/cc/CCDamageTracker.cpp:300 > + TransformationMatrix replicaOriginTransform = renderSurface->replicaOriginTransform(); const reference?
Shawn Singh
Comment 3 2012-03-23 23:04:33 PDT
Created attachment 133622 [details] const reference. thanks Dana\!
Adrienne Walker
Comment 4 2012-03-23 23:25:23 PDT
Comment on attachment 133622 [details] const reference. thanks Dana\! Good catch!
WebKit Review Bot
Comment 5 2012-03-23 23:51:50 PDT
Comment on attachment 133622 [details] const reference. thanks Dana\! Clearing flags on attachment: 133622 Committed r111982: <http://trac.webkit.org/changeset/111982>
WebKit Review Bot
Comment 6 2012-03-23 23:51:54 PDT
All reviewed patches have been landed. Closing bug.
Shawn Singh
Comment 7 2012-03-24 00:42:58 PDT
There's no need to revert, but I'm re-opening this because one of the comments is wrong and I need to fix it. (the unit test is not reflecting about left edge anchored to right side. Its actually just ensuring that the anchor did not incorrectly affect the reflection.)
Shawn Singh
Comment 8 2012-04-03 12:42:32 PDT
Adrienne Walker
Comment 9 2012-04-03 12:50:32 PDT
Comment on attachment 135396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135396&action=review Sure, R=me. Can you open a new bug next time? Bugzilla does pretty poorly with multiple patches on the same bug. > Source/WebKit/chromium/tests/CCDamageTrackerTest.cpp:809 > + // https://bugs.webkit.org/show_bug.cgi?id=82118 No need to link to this bug here. That's what git blame is for.
Shawn Singh
Comment 10 2012-04-03 12:56:20 PDT
(In reply to comment #9) > (From update of attachment 135396 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=135396&action=review > > Sure, R=me. Can you open a new bug next time? Bugzilla does pretty poorly with multiple patches on the same bug. > > > Source/WebKit/chromium/tests/CCDamageTrackerTest.cpp:809 > > + // https://bugs.webkit.org/show_bug.cgi?id=82118 > > No need to link to this bug here. That's what git blame is for. OK sure - I'll land this one on this bug, just this time. From then on I'll use separate bugs. Thanks for the super quick review =)
Shawn Singh
Comment 11 2012-04-03 13:00:24 PDT
Created attachment 135402 [details] Patch for landing
WebKit Review Bot
Comment 12 2012-04-03 13:16:24 PDT
Comment on attachment 135402 [details] Patch for landing Clearing flags on attachment: 135402 Committed r113078: <http://trac.webkit.org/changeset/113078>
WebKit Review Bot
Comment 13 2012-04-03 13:16:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.