[chromium] Incorrect replica originTransform used in CCDamageTracker https://bugs.webkit.org/show_bug.cgi?id=82118

Reviewed by Adrienne Walker.

Source/WebCore:

Unit test added to CCDamageTrackerTest.cpp

* platform/graphics/chromium/cc/CCDamageTracker.cpp:
(WebCore::CCDamageTracker::extendDamageForRenderSurface):

Source/WebKit/chromium:

* tests/CCDamageTrackerTest.cpp:
(WebKitTests::TEST_F):
(WebKitTests):


Canonical link: https://commits.webkit.org/99437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111982 268f45cc-cd09-0410-ab3c-d52691b4dbfc